// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > renders with as correctly 1`] = `
"<section role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</section>"
`;

exports[`RadioGroup > renders with b24ui correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-4"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-4"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-4"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with class correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="absolute" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with color success correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="-1" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with defaultValue correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="true" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" aria-label="1" value="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with description correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <p class="text-base-500 dark:text-base-600">Description 0</p>
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <p class="text-base-500 dark:text-base-600">Description 1</p>
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <p class="text-base-500 dark:text-base-600">Description 2</p>
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with description slot correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Description slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Description slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Description slot</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with descriptionKey correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <p class="text-base-500 dark:text-base-600">1</p>
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <p class="text-base-500 dark:text-base-600">2</p>
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <p class="text-base-500 dark:text-base-600">3</p>
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with disabled correctly 1`] = `
"<div role="radiogroup" data-disabled="" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="-1" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4 cursor-not-allowed opacity-75" tabindex="-1" data-orientation="vertical" data-active="false" data-disabled="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="block text-base-master dark:text-base-400 leading-5 cursor-not-allowed opacity-75">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4 cursor-not-allowed opacity-75" tabindex="-1" data-orientation="vertical" data-active="false" data-disabled="" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="block text-base-master dark:text-base-400 leading-5 cursor-not-allowed opacity-75">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4 cursor-not-allowed opacity-75" tabindex="-1" data-orientation="vertical" data-active="false" data-disabled="" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="block text-base-master dark:text-base-400 leading-5 cursor-not-allowed opacity-75">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with items correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with label slot correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Label slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Label slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Label slot</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with labelKey correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with legend slot correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Legend slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Legend slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Legend slot</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with modelValue correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="true" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" aria-label="1" value="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with orientation correctly 1`] = `
"<div role="radiogroup" aria-orientation="horizontal" aria-required="false" dir="ltr" data-orientation="horizontal" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-row gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="horizontal" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2 me-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="horizontal" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2 me-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="horizontal" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2 me-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with required correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="true" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <legend class="mb-1.5 block text-base-900 dark:text-base-400 text-sm">Legend</legend>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5 after:content-['*'] after:ms-0.5 after:text-red-500 dark:after:text-red-600">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5 after:content-['*'] after:ms-0.5 after:text-red-500 dark:after:text-red-600">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5 after:content-['*'] after:ms-0.5 after:text-red-500 dark:after:text-red-600">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size lg correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1.5">
    <!--v-if-->
    <div class="flex items-start text-xl">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-5" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-xl">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-5" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-xl">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-5" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size md correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size sm correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1.5">
    <!--v-if-->
    <div class="flex items-start text-sm">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-3.5" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-4">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-sm">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-3.5" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-4">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-sm">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-3.5" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-4">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size xs correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-xs">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-3" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="1" value="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-4">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-xs">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-3" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="2" value="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-4">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-xs">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-3" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="3" value="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-4">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with valueKey correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" tabindex="0">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:Option 1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="Option 1" value="Option 1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:Option 1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:Option 2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="Option 2" value="Option 2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:Option 2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 size-4" tabindex="-1" data-orientation="vertical" data-active="false" data-reka-collection-item="" id="v-0-0:Option 3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" aria-label="Option 3" value="Option 3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular ms-2"><label for="v-0-0:Option 3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;
